Dark mode fix for quote

--- a/styles/themeDark.less
+++ b/styles/themeDark.less
@@ -409,3 +409,7 @@ footer{
 	background-color: darken(@gp-complement-mid,5%);
 	text-decoration: double;
 }
+
+#page_forum_thread div.postActions .quotePost {
+    color: #c54;
+}
